# IncomeOS

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  content_creation.py  orchestrator.py  revenue_tracking.py  router.py  skills_diagnosis.py
backend/app/api/: chat.py  monetization.py  revenue.py  skills.py  user.py  workflows.py
backend/app/core/: config.py  dependencies.py
backend/app/schemas/: chat.py  monetization.py  revenue.py  skills.py  workflows.py
backend/tests/: test_api.py
frontend/: .env.example  Dockerfile  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/monetize/: page.tsx
frontend/src/app/dashboard/revenue/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/skills/: page.tsx
frontend/src/app/dashboard/workflows/: page.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: app-store.ts
supabase/: schema.sql
